force-app/main/default/objects/Shipment/fields/DeliveryPriority__c.field-meta.xml
<CustomField>
    <fullName>DeliveryPriority__c</fullName>
    <label>Delivery Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>02</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>High</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>