force-app/main/default/objects/Shipment/fields/DeliveryType__c.field-meta.xml
<CustomField>
    <fullName>DeliveryType__c</fullName>
    <label>Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BV</fullName>
                <label>Cash Sale</label>
            </value>
            <value>
                <fullName>CEM</fullName>
            </value>
            <value>
                <fullName>DOG</fullName>
                <label>Outbound Goods Movement</label>
            </value>
            <value>
                <fullName>DTR</fullName>
                <label>Transfer Posting (Central)</label>
            </value>
            <value>
                <fullName>GPLF</fullName>
                <label>Delivery for Software Maintenance</label>
            </value>
            <value>
                <fullName>HOD</fullName>
                <label>Outbound GI Movement</label>
            </value>
            <value>
                <fullName>HTP</fullName>
                <label>Delivery for Transfer Posting</label>
            </value>
            <value>
                <fullName>JF</fullName>
            </value>
            <value>
                <fullName>JIT2</fullName>
            </value>
            <value>
                <fullName>JITD</fullName>
                <label>JIT Outbound Delivery</label>
            </value>
            <value>
                <fullName>LB</fullName>
                <label>Delivery for Subcontracting</label>
            </value>
            <value>
                <fullName>LB2</fullName>
                <label>DFPS Transport Relocation</label>
            </value>
            <value>
                <fullName>LD</fullName>
                <label>Decentralized Outbound Delivery</label>
            </value>
            <value>
                <fullName>LF</fullName>
                <label>Outbound Delivery (LF)</label>
            </value>
            <value>
                <fullName>LK</fullName>
            </value>
            <value>
                <fullName>LLR</fullName>
                <label>Extended Returns Delivery (LLR)</label>
            </value>
            <value>
                <fullName>LO</fullName>
                <label>Delivery without Reference (LO)</label>
            </value>
            <value>
                <fullName>LO2</fullName>
                <label>Delivery without Reference (LO2)</label>
            </value>
            <value>
                <fullName>LO3</fullName>
                <label>Delivery GR External</label>
            </value>
            <value>
                <fullName>LP</fullName>
                <label>Delivery from Projects</label>
            </value>
            <value>
                <fullName>LPP</fullName>
                <label>PP Delivery</label>
            </value>
            <value>
                <fullName>LR</fullName>
                <label>Returns Delivery</label>
            </value>
            <value>
                <fullName>LR2</fullName>
                <label>Extended Returns Delivery (LR2)</label>
            </value>
            <value>
                <fullName>LRX</fullName>
                <label>Cross-System Stock Transfer Returns Delivery</label>
            </value>
            <value>
                <fullName>NCC2</fullName>
                <label>Intercompany Issue - Receiving Plant</label>
            </value>
            <value>
                <fullName>NCC3</fullName>
                <label>Intercompany Issue - Receiving Intercompany</label>
            </value>
            <value>
                <fullName>NCCR</fullName>
                <label>Receiving Intercompany</label>
            </value>
            <value>
                <fullName>NCCU</fullName>
                <label>Transfer Issue - Outbound Delivery</label>
            </value>
            <value>
                <fullName>NCR</fullName>
                <label>Returns Stock Transfer (Cross-Company)</label>
            </value>
            <value>
                <fullName>NCR2</fullName>
                <label>Returns Intercompany Issue - Receiving Plant</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>