force-app/main/default/objects/Shipment/fields/DeliveryVolume__c.field-meta.xml
<CustomField>
    <fullName>DeliveryVolume__c</fullName>
    <label>Delivery Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>