force-app/main/default/objects/Shipment/fields/DestinationCountry__c.field-meta.xml
<CustomField>
    <fullName>DestinationCountry__c</fullName>
    <label>Destination Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ISOCountryCodes</valueSetName>
    </valueSet>
</CustomField>