force-app/main/default/objects/Shipment/fields/ERPDeliveryNumber__c.field-meta.xml
<CustomField>
    <fullName>ERPDeliveryNumber__c</fullName>
    <description>SAP external identifier (VBELN)</description>
    <externalId>true</externalId>
    <label>ERP Delivery Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>