force-app/main/default/objects/Shipment/fields/ERPTransportationGroup__c.field-meta.xml
<CustomField>
    <fullName>ERPTransportationGroup__c</fullName>
    <label>ERP Transportation Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0001</fullName>
                <label>On pallets</label>
            </value>
            <value>
                <fullName>0002</fullName>
                <label>Bulk liquid</label>
            </value>
            <value>
                <fullName>Z001</fullName>
                <label>JJD Standard</label>
            </value>
            <value>
                <fullName>Z100</fullName>
                <label>JJD Standard II</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>