force-app/main/default/objects/Shipment/fields/IncotermLocation__c.field-meta.xml
<CustomField>
    <fullName>IncotermLocation__c</fullName>
    <label>Incoterm Location</label>
    <length>70</length>
    <type>Text</type>
</CustomField>