force-app/main/default/objects/Shipment/fields/IncotermsCodeMandatory__c.field-meta.xml
<CustomField>
    <fullName>IncotermsCodeMandatory__c</fullName>
    <label>Incoterms Mandatory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncotermsCode</valueSetName>
    </valueSet>
</CustomField>