force-app/main/default/objects/Shipment/fields/IncotermsCodeOptional__c.field-meta.xml
<CustomField>
    <fullName>IncotermsCodeOptional__c</fullName>
    <label>Incoterms Optional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncotermsCode</valueSetName>
    </valueSet>
</CustomField>