force-app/main/default/objects/Shipment/fields/NetWeight__c.field-meta.xml
<CustomField>
    <fullName>NetWeight__c</fullName>
    <label>Net Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>