force-app/main/default/objects/Shipment/fields/PackageCount__c.field-meta.xml
<CustomField>
    <fullName>PackageCount__c</fullName>
    <label>Package Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>