force-app/main/default/objects/Shipment/fields/ShippingPoint__c.field-meta.xml
<CustomField>
    <fullName>ShippingPoint__c</fullName>
    <label>Shipping Point</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1113</fullName>
            </value>
            <value>
                <fullName>1115</fullName>
            </value>
            <value>
                <fullName>1200</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>