force-app/main/default/objects/Shipment/fields/ShipToParty__c.field-meta.xml
<CustomField>
    <fullName>ShipToParty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Represents the ship-to party / goods recipient.</description>
    <inlineHelpText>Select the Account to which the goods will physically be delivered.</inlineHelpText>
    <label>Ship-To Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shipments (Ship-To Party)</relationshipLabel>
    <relationshipName>Shipments2</relationshipName>
    <type>Lookup</type>
</CustomField>