force-app/main/default/objects/Shipment/fields/SoldToParty__c.field-meta.xml
<CustomField>
    <fullName>SoldToParty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Represents the sold-to party / ordering customer.</description>
    <inlineHelpText>Select the customer Account who placed the order and is legally responsible for purchasing the goods</inlineHelpText>
    <label>Sold-To Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shipments (Sold-To Party)</relationshipLabel>
    <relationshipName>Shipments1</relationshipName>
    <type>Lookup</type>
</CustomField>