force-app/main/default/objects/Shipment/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Represents the carrier / logistics service provider.</description>
    <inlineHelpText>Select the freight carrier or logistics provider responsible for transporting the shipment.</inlineHelpText>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shipments (Supplier)</relationshipLabel>
    <relationshipName>Shipments3</relationshipName>
    <type>Lookup</type>
</CustomField>